# politylink-tube

./: .gitignore  LICENSE  README.md  README_en.md  build_artifact.py  cron.py  cron.sh  do_patch.py  do_transcribe.py  do_transcribe_2.py  gatsby-config.js  generate_clips.py  package-lock.json  package.json  pyproject.toml  suggest_support.py  support_transcribe.py  sync_data.py
builder/: .gitignore  README.md  build_artifact.py  cron.py  cron.sh  do_clean.py  do_patch.py  do_transcribe.py  generate_clips.py  generate_images.py  pyproject.toml  suggest_support.py  support_transcribe.py  sync_data.py  test_transcribe.py
builder/crawler/: README.md
builder/crawler/spiders/: __init__.py
builder/db/: init.py  init.sql  migration.sql
builder/mylib/artifact/: builders.py  helpers.py  models.py  utils.py
builder/mylib/artifact/image/: generator.py
builder/mylib/audio/: vad.py
builder/mylib/audio/transcript/: loop.py
builder/mylib/clip/: generator.py  key.py
builder/mylib/scrape/: utils.py
builder/mylib/sqlite/: client.py  schema.py
builder/mylib/utils/: __init__.py  constants.py  path.py  whisper.py
builder/mylib/workflow/: jobs.py  models.py  patch.py  scheduler.py  support.py  transcribe.py
builder/tests/artifact/: test_utils.py
builder/tests/sqlite/: test_client.py
builder/tests/utils/: test_path.py  test_utils.py
builder/tests/workflow/: test_models.py
crawler/: README.md  settings.py
crawler/spiders/: __init__.py  sangiin_tv_spider.py  shugiin_tv_spider.py
data/: support.csv  video.csv
db/: init.sql  migration.sql  scp.sh
frontend/: .gitignore  .prettierignore  README.md  gatsby-browser.js  gatsby-config.js  gatsby-ssr.jsx  package-lock.json  package.json
mylib/: audio.py  command.py  ffmpeg.py
mylib/artifact/: builders.py  models.py  utils.py
mylib/audio/: models.py  vad.py
mylib/clip/: generator.py  key.py
mylib/scrape/: utils.py
mylib/sqlite/: client.py  migration.sql  schema.py
mylib/utils/: __init__.py  constants.py  file.py  path.py
src/pages/: ui.js  (+11 more)
(+67 files in other folders)
