[tool.poetry]
name = "politylink-press"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
requests = "^2.28.2"
wheel = "^0.38.4"
librosa = "^0.9.2"
jupyterlab = "^3.6.1"
matplotlib = "^3.6.3"
soundfile = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
