[tool.poetry]
name = "politylink-tube-builder"
version = "0.1.0"
description = ""
authors = ["MitsukiUsui"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
requests = "^2.28.2"
librosa = "^0.9.2"
pydantic = "^1.10.4"
SQLAlchemy = "^2.0.3"
Scrapy = "^2.8.0"
pure-protobuf = "^2.2.2"
opencv-python = "^4.7.0"
boto3 = "^1.26.76"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.1"
matplotlib = "^3.6.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
